components/Leaderboard.module.css
.leaderboard {
  font-family: 'Cartridge';
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  max-width: 1216px;
  background-color: #1b1b23;
}

.text {
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  text-align: center;
  color: white;
  text-shadow: 0px 0px #421e0e, 1px 1px #421e0e, 2px 2px #421e0e,
    3px 3px #421e0e, 4px 4px #421e0e, 5px 5px #421e0e, 6px 6px #421e0e,
    7px 7px #421e0e, 8px 8px #421e0e, 9px 9px #421e0e, 10px 10px #421e0e,
    11px 11px #421e0e, 12px 12px #421e0e, 13px 13px #421e0e, 14px 14px #421e0e,
    15px 15px #421e0e, 16px 16px #421e0e, 17px 17px #421e0e, 18px 18px #421e0e,
    19px 19px #421e0e, 20px 20px #421e0e, 21px 21px #421e0e, 22px 22px #421e0e,
    23px 23px #421e0e, 24px 24px #421e0e, 25px 25px #421e0e, 26px 26px #421e0e,
    27px 27px #421e0e, 28px 28px #421e0e, 29px 29px #421e0e, 30px 30px #421e0e,
    31px 31px #421e0e, 32px 32px #421e0e, 33px 33px #421e0e, 34px 34px #421e0e,
    35px 35px #421e0e, 36px 36px #421e0e, 37px 37px #421e0e, 38px 38px #421e0e,
    39px 39px #421e0e, 40px 40px #421e0e, 41px 41px #421e0e, 42px 42px #421e0e,
    43px 43px #421e0e, 44px 44px #421e0e, 45px 45px #421e0e, 46px 46px #421e0e,
    47px 47px #421e0e, 48px 48px #421e0e, 49px 49px #421e0e, 50px 50px #421e0e,
    51px 51px #421e0e, 52px 52px #421e0e, 53px 53px #421e0e, 54px 54px #421e0e,
    55px 55px #421e0e, 56px 56px #421e0e, 57px 57px #421e0e, 58px 58px #421e0e,
    59px 59px #421e0e, 60px 60px #421e0e, 61px 61px #421e0e, 62px 62px #421e0e,
    63px 63px #421e0e, 64px 64px #421e0e, 65px 65px #421e0e, 66px 66px #421e0e,
    67px 67px #421e0e, 68px 68px #421e0e, 69px 69px #421e0e, 70px 70px #421e0e,
    71px 71px #421e0e, 72px 72px #421e0e, 73px 73px #421e0e, 74px 74px #421e0e,
    75px 75px #421e0e, 76px 76px #421e0e, 77px 77px #421e0e, 78px 78px #421e0e;
  background: linear-gradient(
    to bottom,
    #ecc152 0%,
    #ecc152 33.33%,
    #db8740 0%,
    #db8740 66.66%,
    #d95559 0%
  );
  overflow-y: hidden;

  width: 100%;
}

.text h2 {
  font-family: 'Cartridge';
  font-size: 64px;
  margin-bottom: 4px;
}

.colorContainer {
  display: flex;
  flex-direction: column;
  height: 9vh;
  width: 100vw;
  position: relative;
}

.leaderboardWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100vw;
}

.leaderboardContainer {
  display: flex;
  flex-direction: column;
  max-width: 1216px;
  width: 100%;
  align-items: center;
  padding: 32px 36px;
  background-color: #24242e;
  margin: 32px 0px;
  color: rgba(255, 255, 255, 0.5);
}

.leaderboardInstructions {
  background-color: #ecc152;
  font-family: 'Cartridge';
  font-weight: 400;
  font-feature-settings: 'ss03';
  color: #121217;
  font-size: 24px;
  border-radius: 4px;
  padding: 4px 16px 2px 16px;
  box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.25);
}

.leaderboardLabels {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  align-items: center;
  font-size: 24px;
}

.leaderboardLabelsLeft {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 113px;
  align-items: center;
  margin: 16px 0px 16px 28px;
  font-feature-settings: 'ss01';
}

.leaderboardLabelsRight {
  margin-right: 110px;
  font-feature-settings: 'ss02';
}

.leaderboardList {
  width: 100%;
  color: white;
  font-size: 32px;
  font-feature-settings: 'ss03';
  height: 80vh;
  padding-right: 32px;
  overflow-y: scroll;
}

.leaderboardList::-webkit-scrollbar {
  width: 32px;
  background: #3a3a44;
  box-shadow: inset 0px 0px 4px 4px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  padding: 6px;
}

.leaderboardList::-webkit-scrollbar-track {
  padding: 6px;
}

.leaderboardList::-webkit-scrollbar-thumb {
  background: #ffffff;
  box-shadow: inset 0px 0px 0px 2px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  margin: 6px;
  border: 6px solid #3a3a44;
  width: 20px;
}

.leaderboardItem {
  display: flex;
  padding: 8px;
  border-radius: 4px;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 16px;
  border: 4px solid rgba(0, 0, 0, 0.16);
  overflow-y: hidden;
  overflow-x: hidden;
  height: 64px;
  align-items: center;
  max-width: 100%;
}

.leaderboardItemGroup {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.leaderboardItemIndex {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  width: 40px;
  margin-left: 8px;
}

.leaderboardItemImgContainer {
  width: 48px;
  height: 48px;
  border-radius: 4px;
  padding: 4px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  font-size: 1px;
  margin: 0px 32px;
}

.leaderboardItemCompany {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  /* max-width: calc(100% - 270px); */
}

.leaderboardItemCompanyContainer {
  /* max-width: 100px; */
  max-width: calc(100vw - 650px);
}

.leaderboardItemTwitter {
  margin-right: 12px;
}

.leaderboardItemTwitterButton {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 16px;
}

.leaderboardItemTwitter:hover .leaderboardItemTwitterButton .twitter {
  filter: invert(54%) sepia(95%) saturate(2614%) hue-rotate(176deg)
    brightness(99%) contrast(91%);
}

.leaderboardItemVotes {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 32px;
  line-height: 32px;
  margin-top: -2px;
  right: 0;
}

.leaderboardItemVotesContainer:hover .x {
  filter: invert(21%) sepia(37%) saturate(3816%) hue-rotate(339deg)
    brightness(118%) contrast(95%);
}

.tellem {
  margin-right: 8px;
  margin-left: 2px;
}

.x {
  align-self: center;
  padding-bottom: 5px;
}

.addStarContainer {
  position: absolute;
  right: calc(
    0.5 * (100vw - 1100px + 10%)
  ); /* TODO: use media query to adjust */
  width: 100px;
  height: 100px;
  /* top: 75px; */
  margin-top: -35px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.addStarLabel {
  z-index: 1;
  color: white;
  font-size: 24px;
  width: 55px;
  line-height: 21px;
  margin-top: -2px;
  animation: rock 4s linear infinite;
  cursor: pointer;
}

.addStar {
  animation: spin 4s linear infinite;
  cursor: pointer;
  margin: 0 auto;
  position: absolute;
}

.addStar:active,
.addStarLabel:active .addStar {
  filter: invert(98%) sepia(82%) saturate(5201%) hue-rotate(318deg)
    brightness(101%) contrast(85%);
}

@keyframes spin {
  100% {
    transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
  }
}

@keyframes rock {
  0% {
    transform: rotate(10deg);
    -webkit-transform: rotate(10deg);
  }
  20% {
    transform: rotate(10deg);
    -webkit-transform: rotate(10deg);
  }
  30% {
    transform: rotate(12deg);
    -webkit-transform: rotate(12deg);
  }
  60% {
    transform: rotate(-2deg);
    -webkit-transform: rotate(-2deg);
  }
  100% {
    transform: rotate(10deg);
    -webkit-transform: rotate(10deg);
  }
}

@media (max-width: 700px) {
  .text h2 {
    font-size: 32px;
  }
}

@media (max-width: 900px) {
  .leaderboardList::-webkit-scrollbar {
    display: none;
  }
  .tellem {
    display: none;
    margin: 0;
  }
  .addStar,
  .addStarContainer,
  .addStarLabel {
    display: none;
  }
  .leaderboardItemCompanyContainer {
    /* max-width: 100px; */
    max-width: calc(100vw - 250px);
  }
  .leaderboardContainer {
    margin-top: 9px;
    padding: 32px 10px;
  }
  .leaderboardList {
    padding: 0;
  }
  .leaderboardItemTwitterButton {
    justify-content: center;
    align-items: center;
  }
  .leaderboardItem {
    height: 48px;
    padding: 0px 8px;
    border: 4px solid rgba(0, 0, 0, 0.16);
    border-radius: 8px;
    margin: 8px 0px;
    font-size: 20px;
    align-items: center;
  }
  .leaderboardItemIndex {
    font-size: 16px;
    margin-left: 0px;
    width: 20px;
  }
  .leaderboardItemImgContainer {
    width: 32px;
    height: 32px;
    margin: 0px 8px;
  }
  .leaderboardItemVotes {
    font-size: 16px;
    margin-left: -8px;
    vertical-align: middle;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }
  .x {
    height: 16px;
    width: 12px;
    padding-top: 1px;
  }
  .leaderboardLabelsRight {
    margin-right: 22px;
    font-family: 'Cartridge';
    font-feature-settings: 'ss02';
  }
  .leaderboardLabelsLeft {
    margin-left: 12px;
    width: 115px;
  }
  .leaderboardInstructions {
    font-size: 12px;
  }
}

@media (max-width: 1100px) {
  .addStarContainer {
    right: 90px;
  }
}

